2007-09-26  Dave Morrison  <drm@finkproject.org>

	* VERSION: releasing version 0.27.6.1 of fink-mirrors

2007-09-26  Dave Morrison  <drm@finkproject.org>

	Recent changes include:
	* keys, list, get-mirrors.pl, inject.pl, install.sh: add freebsd to the mirror list
	* apache, cpan, ctan, debian, freebsd, gimp, gnome, gnu, kde: lots of new mirrors

2007-01-11  Daniel Macks  <dmacks@netspace.org>

	* fink-mirrors.info.in, website: update website URL

2006-10-16  Dave Morrison  <drm@finkproject.org>

	* master, rsync: restored bru.be.eu at request of european users
	* VERSION: releasing version 0.25.1.2 of fink-mirrors

2006-10-15  Dave Morrison  <drm@finkproject.org>

	* master, rsync: removed uox.ms.us and bru.be.eu because they do not 
	work and we can no longer contact their maintainers
	* VERSION: releasing version 0.25.1.1 of fink-mirrors

2006-09-23  Dave Morrison  <drm@finkproject.org>

	* sourceforge: update of mirror list, thanks to Jesse W
	* VERSION: releasing version 0.25.0.1 of fink-mirrors

2006-05-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: releasing version 0.24.15.2 of fink-mirrors

2006-05-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* postinstall.pl.in: Repair CVS/Root parsing, and sharpen the
	search/replace.

2006-05-15  Daniel Macks  <dmacks@netspace.org>

	* postinstall.pl.in: Fix my bad chomp, add lots of other tests for
	definedness before doing string ops.

2006-05-15  Daniel Macks  <dmacks@netspace.org>

	* postinstall.pl.in: Don't create CVS metadata file if it doesn't
	exist. Add diagnostic. Major code cleanup of find2perl residue.

2006-05-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* anonymous-cvs, developer-cvs, cvs-repository: change to
	fink.cvs.sourceforge.net
	* postinstall.pl.in: when the CVS repository in /sw/fink/dists/CVS/Root
	is not correct, fix it in all CVS/Root files

2006-05-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: releasing version 0.24.15.1 of fink-mirrors
