@@ -1,3 +1,7 @@
+2007-10-16  Daniel Macks  <dmacks@netspace.org>
+
+	* COPYING, inject.pl, install.sh, postinstall.pl.in: Update FSF street address.
+
 2007-09-26  Dave Morrison  <drm@finkproject.org>
 
 	* VERSION: releasing version 0.27.6.1 of fink-mirrors
